--- a/src/styles/ui/Forms/_personal.scss
+++ b/src/styles/ui/Forms/_personal.scss
@@ -5,7 +5,7 @@
     max-width:550px;
     box-shadow: rgba(78, 38, 38, 0.35)  0 5px 15px 0px;
     background-color: #fff;
-    height:800px;
+    height:700px;
     .personal-reg-heading{
         background-color: $logo_green;
     }
@@ -15,15 +15,18 @@
     }
     .personal-reg-fields {
         width:100%; 
-        .field-inputs{
-            width:100%;
-            padding:10px;
-            border-radius:3px;
-            outline:none;
-            border:1px solid #ccc;
+      
+    }
+   
+}
+
+   .password-inputs{
+            width:80% !important;
+            padding:15px !important;
+            border-radius:3px !important;
+            outline:none !important;
+            border:1px solid #ccc !important;
             &:focus{
-                border:1px solid #05591B;
+                border:1px solid #05591B !important;
             }
         }
-    }
-}
