--- a/src/styles/ui/_auction.scss
+++ b/src/styles/ui/_auction.scss
@@ -10,9 +10,9 @@
    @media(min-width:992px) and (max-width:1199px){
     max-width:960px
    }  
- @media(min-width:768px) and (max-width:991px){
+  @media(min-width:768px) and (max-width:991px){
      max-width:720px
-}
+ }
    @media(min-width:576px) and (max-width:767px){
          max-width:540px
 } 
@@ -21,13 +21,13 @@
 	background-color: #fff;
 	border-radius: 3px;
 	box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
-	padding: 20px 30px 56px 20px;
+	padding: 20px 30px 30px 20px;
 	box-sizing: border-box;
 	width: 100%;
     position: relative;
     height:500px;
     .auction-image{
-        height:300px;
+        height:100%;
     }
    }
 
@@ -87,10 +87,13 @@
          }
        }
     
-   } 
-   
-   
-
+   }    
 }
+       .auction-tab {
+           margin-top:60px;
+           @media(max-width:767.99px){
+        margin-top:580px;
+       }
+      }
 // end container
 
