--- a/src/styles/ui/Checkout/_checkoutContainer.scss
+++ b/src/styles/ui/Checkout/_checkoutContainer.scss
@@ -4,6 +4,7 @@ $input_border: 0.1rem #dddddd solid;
 
 // border radius
 $border-top: 3px solid#dddd;
+$light-border-top:1px solid #ddd;
 $check-border-top: 3px solid;
 $border-radius: 20px;
 
@@ -128,47 +129,39 @@ $green_color: #0f6929;
         position:relative;
         .scroll-to-order {
           position:absolute;
-          left:17%;
+          left:20%;
         }
         // inflow scroll
         .scroll-resp{
-          width:20%;
+          width:30%;
           }
 
-        .inflow-scroll-active-2, .inflow-scroll-active-3 {
+        .inflow-scroll-active-2, .inflow-scroll-active-3, .outflow-scroll-active-3 {
           border-top: $check-border-top $orange_color;
           width:200px;
+          margin-top:10px;  
         }      
 
-        .inflow-scroll-2, .inflow-scroll-3 {
+        .inflow-scroll-2, .inflow-scroll-3, .outflow-scroll-3 {
           border-top: $border-top;
            width:200px;
-            margin-top:8px;  
+            margin-top:10px;  
         }
 
         .scroll-2-active, .scroll-3-active{
           border-radius:100%;
           width:30px;
           height:30px;
-          border:1px solid $green_color;
+          border:1px solid $orange_color;
         }    
   
-        .inflow-scroll-active-2, .inflow-scroll-active-3{
-             margin-top:8px;  
-        }
-  
-      
-       
-    
-
-        // shipping
-          .shipping-active, .order-active { 
-            color: #000000;
-            font-size: 15px;
-            font-family: "Open Sans";
-            margin-top:5px;
-          }
-            
+        .scroll-2, .scroll-3{
+          border-radius:100%;
+          width:30px;
+          height:30px;
+          border:$light-border-top;
+        }    
+        
       
       }
     }
