added auction style

--- a/src/styles/pages/_buy-support.scss
+++ b/src/styles/pages/_buy-support.scss
@@ -34,7 +34,14 @@
       background: rgba(247, 247, 247);
   }
 }
-
+.item-name{
+  font-size:1.2rem;
+  font-weight:600;
+}
+.bid-item-name{
+  font-size:1.2rem;
+  font-weight:600;
+}
 .img-container {
   position: relative;
   overflow:hidden;
