--- a/src/styles/ui/_searchfilter.scss
+++ b/src/styles/ui/_searchfilter.scss
@@ -327,18 +327,28 @@ $logo_orange:#C75A00;
   position:relative;
 }
 
+
 .searched-data-container{
-  width:100%;
-  position:absolute;
-  z-index:400 !important;
-  .searched-data-subcontainer{
    width:100%;
-   max-width:380px;
+   position:absolute;
+   z-index:400 !important;
+  .searched-data-subcontainer{
+    width:100%;
+    max-width:360px;
     margin:0 auto;
     box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
     background-color: #fff;
     border-radius:3px;
     height:auto;
     border:1px solid #ccc;
+    .searched-data-list{
+      list-style-type:none;
+      cursor:pointer;
+       padding:8px 5px 8px 5px;
+      &:hover{
+        background-color:#ccc;
+       
+      }
+    }
   }
 }
