added sidenaav bar link

--- a/src/styles/ui/_nav.scss
+++ b/src/styles/ui/_nav.scss
@@ -346,6 +346,11 @@
           display:none;
         }
       }
+      .navbar-right-loggedin-hidden{
+         @media screen and (max-width:500px) {
+          display:none;
+        }
+      }
   }
 }
 .shopping-cart{
