--- a/src/styles/ui/_cards.scss
+++ b/src/styles/ui/_cards.scss
@@ -2,6 +2,7 @@
         .card-img-top{
             height:170px;
             z-index:300 !important;
+            cursor:pointer;
         }
         .card-title{
             &:hover{
