--- a/src/styles/ui/Cart/_cartpage.scss
+++ b/src/styles/ui/Cart/_cartpage.scss
@@ -1,33 +1,68 @@
-.checkout-page {
-    width: 55%;
-    min-height: 90vh;
+.cart-page {
+  max-width: 900px;
+  width: 100%;
+  min-height: 90vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 50px auto;
+  .cart-subpage {
+    max-width: 900px;
+    width: 100%;
+    min-height: 20vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 50px auto 0;
-  
-    .checkout-header {
-      width: 100%;
-      padding: 10px 0;
+    margin: 0px auto;
+    @media screen and (max-width: 490px) {
+      border: 1px solid red;
       display: flex;
-      justify-content: space-between;
-      border-bottom: 1px solid darkgrey;
-  
-      .header-block {
-        text-transform: capitalize;
-        width: 23%;
-  
-        &:last-child {
-          width: 8%;
-        }
+      flex-direction: row;
+      max-width: 470px;
+      margin:0px;
+      align-items: flex-start;
+    }
+  }
+
+  .cart-header {
+    width: 100%;
+    padding: 10px 0;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid darkgrey;
+    border:1px solid blue;
+    height:100%;
+    @media screen and (max-width: 490px) {
+      display: flex;
+      flex-direction: column;
+         padding: 15px 0;
+      // justify-content: space-around;
+      // width: 100%;
+      // padding:0px;
+    }
+    .header-block {
+      text-transform: capitalize;
+      width: 23%;
+      // @media screen and (max-width: 490px) {
+      //   width: 100%;
+      // }
+      // .header-block-item {
+      //   @media screen and (max-width: 490px) {
+      //     width: 100%;
+      //     padding: 10px 0;
+      //     border: 1px solid black;
+      //     margin-top: 30px;
+      //     height: 100%;
+      //   }
+      // }
+      &:last-child {
+        width: 8%;
       }
     }
-  
-    .total {
-      margin-top: 30px;
-      margin-left: auto;
-      font-size: 36px;
-    }
-  
   }
-  
+  .total {
+    margin-top: 30px;
+    margin-left: auto;
+    font-size: 36px;
+  }
+}
