--- a/src/styles/ui/Cart/_cartpage.scss
+++ b/src/styles/ui/Cart/_cartpage.scss
@@ -15,11 +15,9 @@
     align-items: center;
     margin: 0px auto;
     @media screen and (max-width: 490px) {
-      border: 1px solid red;
       display: flex;
       flex-direction: row;
       max-width: 470px;
-      margin:0px;
       align-items: flex-start;
     }
   }
@@ -29,36 +27,25 @@
     padding: 10px 0;
     display: flex;
     justify-content: space-between;
-    border-bottom: 1px solid darkgrey;
-    border:1px solid blue;
     height:100%;
     @media screen and (max-width: 490px) {
       display: flex;
       flex-direction: column;
-         padding: 15px 0;
-      // justify-content: space-around;
-      // width: 100%;
-      // padding:0px;
+      padding: 15px 0;
+      width:100%;
     }
     .header-block {
       text-transform: capitalize;
       width: 23%;
-      // @media screen and (max-width: 490px) {
-      //   width: 100%;
-      // }
-      // .header-block-item {
-      //   @media screen and (max-width: 490px) {
-      //     width: 100%;
-      //     padding: 10px 0;
-      //     border: 1px solid black;
-      //     margin-top: 30px;
-      //     height: 100%;
-      //   }
-      // }
+        @media screen and (max-width: 490px) {
+            width: 100%;
+            padding:10px;
+        }
       &:last-child {
         width: 8%;
       }
     }
+  
   }
   .total {
     margin-top: 30px;
