--- a/src/styles/auth/authLayout.scss
+++ b/src/styles/auth/authLayout.scss
@@ -237,12 +237,13 @@
  
   // verify container
   .verify-container{
-    margin: 80px 0px 40px 0px;
+    margin: 80px auto;
     height: 400px;
     max-height:100%;
-    width:40% !important;
+    width:100%;
     box-shadow: rgba(78, 38, 38, 0.35)  0 5px 15px 0px;
-    padding-top: 35px;
+    // padding-top: 35px;
+    max-width:800px;
   }
 
   .form-eye-field{
