--- a/src/styles/ui/__ui-dir.scss
+++ b/src/styles/ui/__ui-dir.scss
@@ -10,7 +10,7 @@
 @import "Forms/donate";
 @import "Forms/funds_form_fields";
 @import "Forms/profile";
-@import "Forms/editprofile";
+@import "Forms/password_withdrawal";
 @import "links";
 @import "sidenav";
 @import "searchfilter";
