--- a/src/styles/ui/_links.scss
+++ b/src/styles/ui/_links.scss
@@ -6,6 +6,14 @@
        color:$logo_orange;
     }
  }
+ .link-router-darkcolor{
+    text-decoration: none;
+     color:#000;
+    &:hover{
+       text-decoration: none;
+       color:#000;
+    }
+ }
 .link-router-inverted{
     text-decoration: none;
     color:#fff;
