styled front view

--- a/src/styles/pages/_description.scss
+++ b/src/styles/pages/_description.scss
@@ -18,4 +18,10 @@
     text-justify: inter-character;
     
   }
+  .description-header{
+    list-style:circle;
+  }
+  .description-read-more{
+    font-size:1.58rem;
+  }
 }
