--- a/src/styles/ui/_button.scss
+++ b/src/styles/ui/_button.scss
@@ -137,65 +137,13 @@
   width:140px !important;
   color:#fff !important;
 }
-.fund-raise-category{
-  position:relative;
-  .start-fund-raise-btn-container{
-     position: absolute;
-     top: 330px;
-     padding-left:15px;
-     padding-right:15px;
-     width:100%;
-     @media(min-width:768px) and (max-width:991px){
-        top: 200px;
-     }
-     @media(min-width:576px) and (max-width:767.99px){
-      top: 230px;
-     }
-     @media(min-width:576px) and (max-width:767.99px){
-      top: 230px;
-     }
-     @media(max-width:575.99px){
-      top: 240px;
-     }
-     @media(max-width:440px){
-      top: 250px;
-     }
-     @media(max-width:373px){
-      top: 300px;
-     }
-     @media(max-width:300px){
-      top: 320px;
-     }
-     .start-raise-fund-sub-container{
-      @media(min-width:1200px){
-            max-width:1120px;     
-            margin-right:auto;
-            margin-left: auto;
-    }
-     @media(min-width:992px) and (max-width:1199px){
-        max-width:930px;
-        margin-right:auto;
-        margin-left: auto;
-       }  
-     @media(min-width:768px) and (max-width:991px){
-         max-width:700px;
-         margin-right:auto;
-         margin-left: auto;
-    }
-       @media(min-width:576px) and (max-width:767px){
-             max-width:520px;
-             margin-right:auto;
-             margin-left: auto;
-    } 
-     }
-    & .start-fund-raise-btn{ 
+ .start-fund-raise-btn{ 
       background-color: $logo_green !important;
       color:$white !important;
       width:150px;
       padding:8px 0 8px 0  !important;
     }  
-  }
-}
+
 
 .market-place-btn{
   background-color: $logo_orange !important;
