--- a/src/styles/ui/Forms/_donate.scss
+++ b/src/styles/ui/Forms/_donate.scss
@@ -199,3 +199,17 @@ label[for=yes] {
 label[for=no] {
   right: 30px;
 }
+
+.donate-message-comment{
+	width:100%;
+	height:120px;
+}
+
+.item-category-condition{
+  display:flex;
+  justify-content:space-between;
+	@media screen and (max-width:430px){
+		display:block;
+	}
+}
+
