--- a/src/styles/dashboard/_dashboard.scss
+++ b/src/styles/dashboard/_dashboard.scss
@@ -64,3 +64,7 @@ tr.hide-table-padding td {
 tbody.collapse.in {
   display: table-row-group;
 }
+
+.total-donations-received{
+  font-size:1.5rem
+}
