--- a/src/styles/ui/Cart/_cart-dropdown.scss
+++ b/src/styles/ui/Cart/_cart-dropdown.scss
@@ -1,21 +1,9 @@
-.cart-dropdown {
-    position: absolute;
-    width: 240px;
-    height: 340px;
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-    border: 1px solid black;
-    background-color: white;
-    top: 80px;
-    right: 40px;
-    z-index: 5;
- 
+
     .cart-items {
       height: 240px;
       display: flex;
       flex-direction: column;
-      overflow: scroll;
+      overflow-x: scroll;
     }
   
     .empty-message{
@@ -25,5 +13,5 @@
     button {
       margin-top: auto;
     }
-  }
+  
   
