--- a/src/styles/ui/Cart/_checkout-item.scss
+++ b/src/styles/ui/Cart/_checkout-item.scss
@@ -14,7 +14,7 @@
         padding:15px 5px;
       }
     .image-container {
-      width: 23%;
+      width: 19%;
       padding-right: 15px;
       img {
         width: 100%;
@@ -24,7 +24,7 @@
     .checkout-name-price-container{
          display:flex;
          justify-content:space-between;
-         width:58%;
+         width:69%;
          @media screen and (max-width:490px){
           display:flex;
           flex-direction: column;  
@@ -34,8 +34,8 @@
            margin-top:14px;  
         }
       .name,
-    .price {
-      width: 23%;
+    .quantity, .price {
+       width: 23%;
        @media screen and (max-width:490px){  
           width:100%;  
           display:flex;
@@ -44,6 +44,7 @@
           align-items:flex-end;  
           padding:0px  0px 15px 0px;
           }
+      
     }
     }  
    
