--- a/src/styles/ui/_footer.scss
+++ b/src/styles/ui/_footer.scss
@@ -28,6 +28,7 @@
    text-justify:inherit;
    word-break:normal;
    font-size:1.1em;
+   width:100%;
 }
    .categories-col, .resources-col{
       display:flex;
