--- a/src/styles/ui/Forms/_coorporate.scss
+++ b/src/styles/ui/Forms/_coorporate.scss
@@ -11,8 +11,7 @@
     }
     .all-fields{
         margin:0 auto;
-        max-width:500px;
-     
+        max-width:500px; 
     }
     .coorporate-reg-fields {
         width:100%; 
@@ -20,4 +19,8 @@
             width:100%;
         }
     }
+}
+.corporate-category{
+    height: 100px;
+    font-size:1.5rem;
 }
