--- a/src/styles/pages/_affiliate.scss
+++ b/src/styles/pages/_affiliate.scss
@@ -20,6 +20,12 @@
       max-width:900px;
         width:100%;
  }
+ .corporate-auction-subheading{
+   padding:5px 15px 0px 15px;
+    font-weight:2rem;
+      max-width:900px;
+        width:100%;
+ }
 .corporate-auction-sub-text{
   font-size:1.5rem;
   width:100%;
@@ -41,7 +47,7 @@
   position: absolute;
   display: table;
   right: 0;
-  top: 980px;
+  top: 870px;
   height: 70px;
   line-height: 124px;
   white-space: nowrap;
