--- a/src/styles/ui/_cards.scss
+++ b/src/styles/ui/_cards.scss
@@ -1,5 +1,11 @@
    
-    .card{
+      .card-item, .card-cash{
+       height:442.45px;
+      }
+      .market-card{
+          border:1px solid orange;
+          height:320px;
+      }
         .card-img-top{
             height:140px;           
             z-index:300 !important;
@@ -15,23 +21,17 @@
         }
         .donated-ws{
             justify-content:space-between;
-        }
-        // .fund-category{
-        //     width:80% !important;
-        // }
-      
+        }    
         .truncate{
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
         }
-    }
+    
      
-
     #share-modal{
         z-index:2300 !important
     }
-
     .ai-outline{
         font-size:21px;
         cursor:pointer;
