--- a/src/styles/pages/_buy-support.scss
+++ b/src/styles/pages/_buy-support.scss
@@ -21,11 +21,11 @@
   border-color: transparent;
   transition: all 1s linear;
   height:350px;
+  cursor:pointer;
   &:hover {
     border: 0.04rem solid rgba(0, 0, 0, 0.2);
     box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.02);
-  }
-  
+  }  
 .card-footer {
   background: none;
   transition: all 1s linear;
