--- a/src/styles/ui/_auction.scss
+++ b/src/styles/ui/_auction.scss
@@ -4,9 +4,14 @@
 .time-text{
   font-size:.8rem;
 }
+.auction-timer-container{
+  display:flex;
+  @media screen and (max-width:430px){
+    display:block;
+  }
+}
 .countdown-container{
   width:60%;
-
 }
 
 .bid-text{
@@ -44,7 +49,12 @@ li{
      border:none;
   }
 }
-
+.bidnow-btn-container{
+  width:60%;
+  @media screen and (max-width:991.99px){
+    width:100%;
+  }
+}
 .auction-container {
   width: 100%;
   height:550px;
@@ -85,7 +95,6 @@ li{
       }
     }
   }
-
   .auction-detail-container {
     border: 1px solid #ccc;
     background-color: #fff;
@@ -100,6 +109,12 @@ li{
     margin-bottom: 20px;
     @media (max-width: 767.99px) {
       margin-bottom: 200px;
+    }
+    @media (max-width: 432px) {
+      height:680px;
+    }
+    @media (max-width: 329px) {
+      height:700px;
     }
     input[type="number"] {
   -webkit-appearance: textfield;
@@ -136,10 +151,9 @@ input[type=number]::-webkit-outer-spin-button {
   position: relative;
 }
 
- 
    .auction-add-minus-container {
      .sub-auction{
-       width:460px;
+       width:80%;
       
       .auction-add-minus-subcontainer {
         border: 1px solid #ccc;
@@ -165,8 +179,7 @@ input[type=number]::-webkit-outer-spin-button {
           cursor: pointer;
         }
       }
-     }
-      
+     }    
       .riauction-container {
         width: 60px;
         height:30px;
