--- a/src/styles/dashboard/_dashboard.scss
+++ b/src/styles/dashboard/_dashboard.scss
@@ -3,22 +3,29 @@
     color:inherit;
     &:hover{
         text-decoration: none;
-        color:inherit;
+        color:#fff;
     }
-     &:focus{
-     background-color:#0C5421 !important;
- }
+   
 }
 .c-header-nav, .dropdown-item{
     text-decoration: none;
     color:inherit;
-     &:focus{
-     background-color:#0C5421 !important;
- }
+    
+}
+.dropdown-item{
+    &:focus, &:hover{
+     background-color:#0F6929 !important;
+     .c-subheader-nav-link{
+         color:#fff;
+     }
+    }
 }
 
 .c-sidebar{
 background-color:#0F6929 !important;
+ &:focus{
+       background-color:#0F6929 !important; 
+    }
 }
 
  .c-sidebar-nav-dropdown-toggle{
