--- a/src/styles/ui/Forms/_coorporate.scss
+++ b/src/styles/ui/Forms/_coorporate.scss
@@ -1,3 +1,4 @@
+
 .coorporate-form-container{
     width:100%;
     margin-right:auto;
@@ -20,7 +21,15 @@
         }
     }
 }
-.corporate-category{
+
+.form-corporate-parent-container{
+    position:relative;
+    border:1px solid orange;
+    .corporate-form-header{
+      
+    }
+   .corporate-category{
     height: 100px;
     font-size:1.5rem;
+}
 }
