--- a/src/styles/dashboard/_dashboard.scss
+++ b/src/styles/dashboard/_dashboard.scss
@@ -35,6 +35,12 @@ background-color:#0F6929 !important;
 .icon-position {
     margin-top:-18px;
 }
+.referred-user-number{
+    font-size:1.5rem
+}
+.create-affiliate-profile{
+        font-size:1.2rem
+}
   .c-sidebar-nav-link{
   &:hover{
     background-color:#C75A00 !important;
