--- a/src/styles/auth/authLayout.scss
+++ b/src/styles/auth/authLayout.scss
@@ -241,8 +241,7 @@
     height: 400px;
     max-height:100%;
     width:100%;
-    box-shadow: rgba(78, 38, 38, 0.35)  0 5px 15px 0px;
-    // padding-top: 35px;
+    box-shadow: rgba(78, 38, 38, 0.35)  0 5px 15px 0px;;
     max-width:800px;
   }
 
@@ -251,8 +250,9 @@
     .password-icon{
       position:absolute;
       top:17px;
-      left:220px;
+      left:240px;
     }
+ 
   }
 
   .form-error-message{
