--- a/src/styles/auth/authLayout.scss
+++ b/src/styles/auth/authLayout.scss
@@ -252,6 +252,11 @@
       top:17px;
       left:240px;
     }
+    .password-icon-login{
+      position:absolute;
+      top:17px;
+      left:220px;
+    }
  
   }
 
