--- a/src/styles/pages/_buy-support.scss
+++ b/src/styles/pages/_buy-support.scss
@@ -34,10 +34,12 @@
 .item-name{
   font-size:1.2rem;
   font-weight:600;
+  width:150px;
 }
 .bid-item-name{
   font-size:1.2rem;
   font-weight:600;
+  width:100px;
 }
 .img-container {
   position: relative;
