--- a/src/styles/pages/_affiliate.scss
+++ b/src/styles/pages/_affiliate.scss
@@ -9,6 +9,9 @@
   box-shadow:0px 5px 17px -7px rgba(0, 0, 0, 1);
   margin-right:10px;
   transition:transform 100ms ease-in;
+  @media screen and (max-width:411px){
+     height:600px;
+  }
  .boss-text{
       padding-top:100px; 
   }
@@ -52,6 +55,28 @@
   line-height: 124px;
   white-space: nowrap;
   font-size: 0;
+  @media screen and (max-width:767.99px){
+     top: 950px;
+  }
+  @media screen and (max-width:517.99px){
+     top: 1000px;
+  }
+  @media screen and (max-width:443.99px){
+     top: 1040px;
+  }
+  @media screen and (max-width:409.99px){
+     top: 1180px;
+  }
+  @media screen and (max-width:409.99px){
+     top: 1221px;
+  }
+
+   @media screen and (max-width:359.99px){
+     top: 1290px;
+  }
+  @media screen and (max-width:326.99px){
+     top: 1350px;
+  }
 }
 
 .listar-map-button {
