--- a/src/styles/ui/Forms/_profile.scss
+++ b/src/styles/ui/Forms/_profile.scss
@@ -39,7 +39,8 @@
 	vertical-align: middle;
 	border-style: none;
 	border-radius:50%;
-	width:100%;
+	width:50px;
+	height:50px
 }
 
 .about_textarea {
@@ -401,6 +402,7 @@ button.bg-white {
 	box-shadow: 0 0 2rem 0 rgba(136, 152, 170, .15) !important;
 }
 .card-profile-image {
+		// background-color: #F7F7F7;
 	img {
 		box-shadow: 0 0 2rem 0 rgba(136, 152, 170, .15) !important;
 		position: absolute;
@@ -409,6 +411,7 @@ button.bg-white {
 		transition: all .15s ease;
 		transform: translate(-50%, -30%);
 		border-radius: .375rem;
+	
 		&:hover {
 			transform: translate(-50%, -33%);
 		}
